@@ -27,6 +27,7 @@ Date: ???
     - Hide extra power entities
     - Added Ore sorting facility 5
     - Buffed recipes for Silicon arbide, Silicon nitride, Tungsten carbide plate, Copper-tungsten plate
+    - SpaceX techs Habitation Modules and Life Support Systems require bio science
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed localised name of Mad Clown's Ore crystallization recipes
